<resources>
    <string name="app_name">rickAndMortyQuiz</string>
    <string name="question_1">The Rick &amp; Morty That The Show Follows Are Originally From Dimension C-173</string>
    <string name="question_2">Jerry\'s Station Wagon Is Based On The Car From National Lampoon\'s Vacation?</string>
    <string name="question_3">Rick &amp; Morty Have Appeared In The Opening Title Screen Of The Simpsons?</string>
    <string name="question_4">Jaguar From \'Pickle Rick\' Had His Own Spin Off Show With Adult Swim?</string>
    <string name="question_5">Two Brothers\' Is The First Show Rick &amp; Morty Watch On Inter-Dimensional Cable?</string>
    <string name="question_6">According To Dan Harmon, A Schmeckle Is Worth $148?</string>
    <string name="question_7">The Bloomflark Is The Universal Currency For The Galactic Federation?</string>
    <string name="question_8">When Bird-Person Is \'Reborn\' He Is Dubbed Phoenix-Bird?</string>
    <string name="question_9">Doctor Neon Bloom Runs Anatomy Park?</string>
    <string name="question_10">When Snuffles Is Able To Talk, He Changes His Name To Snowball?</string>
    <string name="question_11">"Wubba Lubba Dub Dub" Means \'Let\'s Party\'?</string>
    <string name="question_12">Leading Up To The First Episode, Rick Had Left Beth And The Family For 10 Year</string>
    <string name="question_13">In \'Total Rickall\', The Only Character That Isn\'t A Parasite Is Pencilvester?</string>
    <string name="question_14">Tammy Killed Bird-Person On Their Wedding Day?</string>
    <string name="question_15">When Being Scammed By The Zigereons, Rick\'s Safe Code Is \'1-3-5-3\'?</string>
    <string name="question_16">Ice-T\'s Real Name On Alphabetrium Was H2O-T?</string>
    <string name="question_17">When Jerry &amp; Beth Split Up, Jerry Enters A Relationship With A Krootabulan?</string>
    <string name="question_18">The Episode \'Something Ricked This Way\' Is A Parody Of An Edgar Allen Poe Poem</string>
    <string name="question_19">Rick\'s Hivemind Ex-Lover Is Called Purity?</string>
    <string name="question_20">The Conjoint Twin That Simultaneously Host The News &amp;v A Cooking Show Are Calle Michael &amp; Pichael?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">About</string>
    <string name="rules">Rules</string>
    <string name="rick_and_morty_quiz">Rick and Morty Quiz</string>
    <string name="rick_and_morty_image">Rick and morty image</string>
    <string name="play">Play</string>
    <string name="rick_and_morty_trivia_header">rick and morty trivia header</string>
    <string name="test_your_rick_and_morty_knowledge">test your Rick and Morty Knowledge.</string>
    <string name="see_what_your_score_will_be_once_you_answer_all_the_questions">see what your score will be once you answer all the questions</string>
    <string name="try_to_improve_your_score_by_replaying_this_quiz">try to improve your score by replaying this quiz</string>
    <string name="truee">True</string>
    <string name="falsse">False</string>
    <string name="todo">TODO</string>
    <string name="winning_image">winning Image</string>
    <string name="your_score">Your Score:</string>
    <string name="answer_the_questions_with_the_options_that_appear">Answer the questions with the options that appear.</string>
    <string name="once_the_answer_is_selected_the_answer_cannot_be_changed">Once the answer is selected, the answer cannot be changed.</string>
    <string name="once_all_questions_are_answered_scores_will_be_displayed_on_a_new_page">Once all questions are answered, scores will be displayed on a new page.</string>
    <string name="rule_in_page">Rules:</string>
    <string name="right_answer">right answer</string>
    <string name="wrong_answer">Wrong answer</string>
</resources>