<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameViewModel"
            type="com.example.rickandmortyquiz.game.GameViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.GameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:contentDescription="@string/rick_and_morty_image"
                android:src="@drawable/rnm02"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.153"
                android:text="@{context.getText(gameViewModel.question)}"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_baseline_navigate_before_24"
                    android:contentDescription="@string/todo"
                    android:onClick="@{() -> gameViewModel.prevQ()}"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdoTrue"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> gameViewModel.answered(true)}"
                        android:text="@string/truee" />

                    <RadioButton
                        android:id="@+id/rdoFalse"
                        android:layout_width="80dp"
                        android:onClick="@{() -> gameViewModel.answered(false)}"
                        android:layout_height="wrap_content"
                        android:text="@string/falsse" />
                </RadioGroup>

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{() -> gameViewModel.nextQ()}"
                    android:contentDescription="@string/rick_and_morty_image"
                    app:srcCompat="@drawable/ic_baseline_navigate_next_24" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="166dp"
                android:layout_height="175dp"
                android:contentDescription="@string/right_answer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.699"
                app:srcCompat="@drawable/right_24" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="168dp"
                android:layout_height="174dp"
                android:contentDescription="@string/wrong_answer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.698"
                app:srcCompat="@drawable/wrong_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>